still trying to get an idea of what layout I would like to go with

--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,40 @@
 .nav-bar{
-    background-color: pink;
+    background-color: rgb(230, 87, 111);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    border: 1px solid black;
+    width: 100vw;
+    /* border: 1px solid black; */
     height: 100px;
     padding: 30px 60px;
     box-sizing: border-box;
 }
 
+.logo{
+    color: white;
+    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 2px;
+}
+
 .nav-items{
     text-decoration: none;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 60%;
     justify-content: space-between;
     display: flex;
+}
+
+.body-div{
+    width: 100vw;
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text{
+    /* border: 1px solid black; */
+    /* width: 100%; */
+    padding: 60px;
 }
